--- a/install-apache.yaml
+++ b/install-apache.yaml
@@ -3,16 +3,13 @@
 - hosts: all
   become: true
   tasks:
-  - name: update apt index
-    apt:
-      update_cache: yes 
-  
-  - name: install apache2
-    apt:
-      name: apache2
-      state: latest
 
-  - name: add php support
-    apt: 
-      name: libapache2-mod-php
+
+  - name: install apache2 and php packages
+    package:
+      name: 
+        - apache2
+        - libapache2-mod-php
       state: latest
+      update_cache: yes 
+
